--- a/test/fixtures/days.yml
+++ b/test/fixtures/days.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyText
-  type: MyText
-  duration: 1
+  exercises: MyString
 
 two:
-  name: MyText
-  type: MyText
-  duration: 1
+  exercises: MyString
